# Phoenix-Feed-Engine

./: .gitignore  CODEBASE_AUDIT.md  LICENSE  README.md  docker-compose.yml  ingest_text.py  ingest_video.py  requirements.txt  run_local.sh  signals_client.py
benchmarks/results/: benchmark_results.md  benchmark_smart_v1_results.json  benchmark_smart_v1_results.md  benchmark_smart_v2_results.json  benchmark_smart_v2_results.md  benchmark_v1_results.md  benchmark_v5_results.md
benchmarks/scripts/: benchmark.py  benchmark_smart_v1.py  benchmark_v1.py  benchmark_v2.py  benchmark_v3.py  benchmark_v4.py
clients/: signals_client.py
docs/: API.md  LOCAL_TESTING.md  for_you_algorithm.md
engines/ml_service/: __init__.py  processor.py  requirements_ml.txt
requirements/: base.txt  ml.txt
rust_feed_engine/: Cargo.toml  Dockerfile
rust_feed_engine/src/: api.rs  extra_components.rs  filters.rs  hydrators.rs  interaction_handler.rs  interaction_weights.rs  main.rs  models.rs  params.rs  phoenix_pipeline.rs  pipeline.rs  scorers.rs  selectors.rs  social_graph.rs  sources.rs  state.rs  user_store.rs  util.rs
rust_feed_engine/src/filters/: age_filter.rs  previously_seen_posts_filter.rs  self_tweet_filter.rs  social_filters.rs  visibility_filter.rs
rust_feed_engine/src/scorers/: diversity_scorer.rs  phoenix_scorer.rs  weighted_scorer.rs
smart_ingestion/: .env.example  CONNECT_TO_PROJECT.md  Dockerfile  README.md  __init__.py  celery_app.py  config.py  requirements.txt
tests/: test_description_quality.py  test_neural_pipeline.py  test_text_pipeline.py
(+12 files in other folders)
